--- a/utils/sugar1/src/scss/list/_list-join.scss
+++ b/utils/sugar1/src/scss/list/_list-join.scss
@@ -1,18 +1,18 @@
+@use 'sass:list';
 /**
  * Return a string representing all the list items
  *
- * @param         {List}        $list         The list to process
- * @return        {String}                    The string representing all the list items
+ * @param         {List}        $list1         The list to process
+ * @param         {List}        $list2         The list to join with the first one
+ * @param         {String}      [$separator=auto]     The separator to use for the list. Can be auto, comma or space
+ * @param         {String|Boolean}    [$bracketed=auto]     If true is passed, the list will be bracketed
+ * @return        {String}                    The new list
  *
- * @example
- * sugar.list-join(('hello','-','world')); // hello-world
+ * @example     scss
+ * sugar.list-join(('hello','world'), ('coco'), space); // ('hello' 'world' 'coco')
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function list-join($list) {
-  $res: '';
-  @each $item in $list {
-    $res: '#{$res}#{$item}';
-  }
-  @return $res;
+@function list-join($list1, $list2, $separator: auto, $bracketed: auto) {
+  @return list.join($list1, $list2, $separator, $bracketed);
 }
