--- a/utils/sugar1/src/scss/mixins/_all.scss
+++ b/utils/sugar1/src/scss/mixins/_all.scss
@@ -1,3 +1,4 @@
+@import "background";
 // @import "border-radius";
 // @import "center-block";
 @import "clearfix";
@@ -6,12 +7,11 @@
 @import "corner";
 // @import "fit";
 @import "text-hide";
-// @import "background";
 // @import "icon";
 // @import "image-rendering";
 // @import "list-bullet";
 // @import "list";
-// @import "media";
+@import "media";
 // @import "placeholder";
 // @import "position";
 @import "ratio";
