--- a/utils/sugar1/src/scss/list/_list-implode.scss
+++ b/utils/sugar1/src/scss/list/_list-implode.scss
@@ -21,5 +21,10 @@
     }
     $idx: $idx + 1;
   }
-  @return list-join($res);
+
+  $resString: '';
+  @each $item in $res {
+    $resString: '#{$resString}#{$item}';
+  }
+  @return $resString;
 }
