--- a/utils/sugar1/src/scss/loaders/_all.scss
+++ b/utils/sugar1/src/scss/loaders/_all.scss
@@ -1,7 +1,7 @@
 @import "loader-bars";
 @import "loader-circle";
-// @import "loader-couch-potato";
-// @import "loader-flip-ball";
-// @import "loader-grid";
-// @import "loader-radial";
-// @import "loader-spinner";
+@import "loader-couch-potato";
+@import "loader-flip-ball";
+@import "loader-grid";
+@import "loader-radial";
+@import "loader-spinner";
