--- a/utils/sugar1/src/scss/loaders/_loader-flip-ball.scss
+++ b/utils/sugar1/src/scss/loaders/_loader-flip-ball.scss
@@ -1,4 +1,5 @@
 /**
+ * @name      loader-flip-ball
  * Generate a full animated, single element, flip ball style loader
  *
  * @param 		{String} 		[$shape=circle] 			The shape of the loader (circle,rect)
@@ -10,12 +11,12 @@
  *
  * @example
  * .my-cool-loader {
- * 		\@include s-loader-flip-ball();
+ * 		\@include sugar.loader-flip-ball();
  * }
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-loader-flip-ball(
+@mixin loader-flip-ball(
   $shape: circle,
   $size: 1em,
   $color: primary,
@@ -23,48 +24,49 @@
   $a-delay: 0s,
   $a-ease: ease-in-out
 ) {
-  @if $_sugar-test-arguments {
-    $shape: s-test-argument(
-      "s-loader-flip-ball",
-      "shape",
-      (circle, rect),
-      $shape
-    );
-    $size: s-test-argument("s-loader-flip-ball", "size", number, $size);
-    $color: s-test-argument(
-      "s-loader-flip-ball",
-      "color",
-      "color|list-color",
-      $color
-    );
-    $a-duration: s-test-argument(
-      "s-loader-flip-ball",
-      "a-duration",
-      second,
-      $a-duration
-    );
-    $a-delay: s-test-argument(
-      "s-loader-flip-ball",
-      "a-delay",
-      second,
-      $a-delay
-    );
-    $a-ease: s-test-argument("s-loader-flip-ball", "a-ease", string, $a-ease);
-  }
+
+  $color: color($color);
+
+  $shape: test-argument(
+    "sugar.loader-flip-ball",
+    "shape",
+    (circle, rect),
+    $shape
+  );
+  $size: test-argument("sugar.loader-flip-ball", "size", number, $size);
+  $color: test-argument(
+    "sugar.loader-flip-ball",
+    "color",
+    "color|list-color",
+    $color
+  );
+  $a-duration: test-argument(
+    "sugar.loader-flip-ball",
+    "a-duration",
+    second,
+    $a-duration
+  );
+  $a-delay: test-argument(
+    "sugar.loader-flip-ball",
+    "a-delay",
+    second,
+    $a-delay
+  );
+  $a-ease: test-argument("sugar.loader-flip-ball", "a-ease", string, $a-ease);
 
   // handle colors
-  $colors: null;
-  @if s-is($color, list-color) and length($color) > 1 {
+  $colors: $color;
+  @if is($color, list-color) and list-length($color) > 1 {
     $colors: $color;
   }
 
   $a-duration: $a-duration + $a-delay;
 
-  $a-name: unquote("google-ball-#{unique-id()}");
+  $a-name: str-unquote("google-ball-#{str-unique-id()}");
 
   $c: $color;
   @if $colors {
-    $c: nth($colors, length($colors));
+    $c: list-nth($colors, list-length($colors));
   }
 
   display: inline-block;
@@ -86,7 +88,7 @@
       border-radius: $size $size 0 0;
     }
     content: "";
-    background: s-color($c);
+    background: color($c);
     transform-origin: $size / 2 $size / 2;
     position: absolute;
     top: 0;
@@ -107,70 +109,70 @@
   }
   $steps: 2;
   @if $colors {
-    $steps: length($colors);
+    $steps: list-length($colors);
   }
 
   @keyframes #{$a-name}-after {
     @for $i from 1 through $steps {
-      #{percentage(1 / $steps * $i) - 0.0001%} {
+      #{math-percentage(1 / $steps * $i) - 0.0001%} {
         transform: rotateX(180deg);
       }
-      #{percentage(1 / $steps * $i)} {
-        background: s-color(nth($colors, $i));
+      #{math-percentage(1 / $steps * $i)} {
+        background: color(list-nth($colors, $i));
         transform: rotateX(0deg);
       }
-      #{percentage(1 / $steps * $i) - percentage(1 / $steps) / 2} {
+      #{math-percentage(1 / $steps * $i) - math-percentage(1 / $steps) / 2} {
         $c: null;
         @if $i - 1 <= 0 {
-          $c: nth($colors, length($colors));
+          $c: list-nth($colors, list-length($colors));
         } @else {
-          $c: nth($colors, $i - 1);
+          $c: list-nth($colors, $i - 1);
         }
-        background: s-color($c, -darken 10%);
+        background: color($c, -darken 10%);
       }
-      #{(percentage(1 / $steps * $i) - percentage(1 / $steps) / 2 + 0.0001%)} {
+      #{(math-percentage(1 / $steps * $i) - math-percentage(1 / $steps) / 2 + 0.0001%)} {
         $c: null;
-        @if $i + 1 > length($colors) {
-          $c: nth($colors, 1);
+        @if $i + 1 > list-length($colors) {
+          $c: list-nth($colors, 1);
         } @else {
-          $c: nth($colors, $i + 1);
+          $c: list-nth($colors, $i + 1);
         }
-        background: s-color(nth($colors, $i), -lighten 8%);
+        background: color(list-nth($colors, $i), -lighten 8%);
       }
     }
   }
   @keyframes #{$a-name}-before {
     @for $i from 1 through $steps {
-      #{percentage(1 / $steps * $i) - 0.0001%} {
-        background: s-color(nth($colors, $i));
+      #{math-percentage(1 / $steps * $i) - 0.0001%} {
+        background: color(list-nth($colors, $i));
       }
-      #{percentage(1 / $steps * $i)} {
+      #{math-percentage(1 / $steps * $i)} {
         $c: null;
-        @if $i + 1 > length($colors) {
-          $c: nth($colors, 1);
+        @if $i + 1 > list-length($colors) {
+          $c: list-nth($colors, 1);
         } @else {
-          $c: nth($colors, $i + 1);
+          $c: list-nth($colors, $i + 1);
         }
-        background: s-color($c);
+        background: color($c);
       }
     }
   }
   @keyframes #{$a-name}-rotate {
     @for $i from 1 through $steps {
-      #{percentage(1 / $steps * $i) - 0.0001%} {
+      #{math-percentage(1 / $steps * $i) - 0.0001%} {
         transform: rotate(($i - 1) * 90deg);
         $c: null;
         @if $i - 1 <= 0 {
-          $c: nth($colors, length($colors));
-          background: s-color($c);
+          $c: list-nth($colors, list-length($colors));
+          background: color($c);
         } @else {
-          $c: nth($colors, $i - 1);
-          background: s-color($c);
+          $c: list-nth($colors, $i - 1);
+          background: color($c);
         }
       }
-      #{percentage(1 / $steps * $i)} {
+      #{math-percentage(1 / $steps * $i)} {
         transform: rotate($i * 90deg);
-        background: s-color(nth($colors, $i));
+        background: color(list-nth($colors, $i));
       }
     }
   }
