--- a/utils/sugar1/src/scss/loaders/_loader-grid.scss
+++ b/utils/sugar1/src/scss/loaders/_loader-grid.scss
@@ -1,7 +1,35 @@
-// @TODO : documentation
-@mixin s-loader-grid(
+/**
+ * @name      loader-grid
+ * Generate a grid style loader
+ *
+ * @param       {String}      [$shape=rect]             The shape of the grid items. Can be rect or circle
+ * @param       {Color}       [$color=color(primary)]   The color to use for the grid items
+ * @param       {Number}      [$cols=5]                 How many columns the grid must have
+ * @param       {Number}      [$rows=5]                 How many rows must have the grid
+ * @param       {Number}      [$size=10px]              The size of each grid items
+ * @param       {Number}      [$gap=5px]                The size of the gaps between the grid items
+ * @param       {Number}      [$offset=200px]           The offset used for the grid
+ * @param       {Number}      [$rotate=0deg]            Apply a rotation to the grid items
+ * @param       {String}      [$a-shape=null]           The animation shape to apply to the grid items. Can be rect or circle
+ * @param       {Number}      [$a-steps=5]              How many steps must have the animation
+ * @param       {Number}      [$a-spread=null]          How much must the grid items spread during the animation
+ * @param       {Number}      [$a-rotate=null]          How many degrees must the grid items rotate during the animation
+ * @param       {Number}      [$a-scale=null]           Apply a scale for the animation of the grid items
+ * @param       {Number}      [$a-opacity=null]         Apply an opacity to the grid items during the animation
+ * @param       {Second}      [$a-duration=1s]          The duration of the animation
+ * @param       {Second}      [$a-delay=0s]             How many seconds to wait between each animations
+ * @param       {String}      [$a-ease=ease-in-out]     The easing to use for the animation
+ *
+ * @example     scss
+ * .my-cool-loader {
+ *    @include sugar.loader-grid();
+ * }
+ *
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+ */
+@mixin loader-grid(
   $shape: rect,
-  $color: s-color(primary),
+  $color: color(primary),
   $cols: 5,
   $rows: 5,
   $size: 10px,
@@ -18,49 +46,47 @@
   $a-delay: 0s,
   $a-ease: ease-in-out
 ) {
-  @if $_sugar-test-arguments {
-    $shape: s-test-argument("s-loader-grid", "shape", (rect, circle), $shape);
-    $color: s-test-argument(
-      "s-loader-grid",
-      "color",
-      "color|list-color",
-      $color
-    );
-    $cols: s-test-argument("s-loader-grid", "cols", integer, $cols);
-    $rows: s-test-argument("s-loader-grid", "rows", integer, $rows);
-    $size: s-test-argument("s-loader-grid", "size", number, $size);
-    $gap: s-test-argument("s-loader-grid", "gap", number, $gap);
-    $offset: s-test-argument("s-loader-grid", "offset", number, $offset);
-    $rotate: s-test-argument("s-loader-grid", "rotate", degree, $rotate);
-    $a-shape: s-test-argument(
-      "s-loader-grid",
-      "a-shape",
-      (rect, circle),
-      $a-shape
-    );
-    $a-steps: s-test-argument("s-loader-grid", "a-steps", integer, $a-steps);
-    $a-spread: s-test-argument("s-loader-grid", "a-spread", number, $a-spread);
-    $a-rotate: s-test-argument("s-loader-grid", "a-rotate", degree, $a-rotate);
-    $a-scale: s-test-argument("s-loader-grid", "a-scale", number, $a-scale);
-    $a-opacity: s-test-argument(
-      "s-loader-grid",
-      "a-opacity",
-      number,
-      $a-opacity
-    );
-    $a-duration: s-test-argument(
-      "s-loader-grid",
-      "a-duration",
-      second,
-      $a-duration
-    );
-    $a-delay: s-test-argument("s-loader-grid", "a-delay", second, $a-delay);
-    $a-ease: s-test-argument("s-loader-grid", "a-ease", string, $a-ease);
-  }
+  $shape: test-argument("sugar.loader-grid", "shape", (rect, circle), $shape);
+  $color: test-argument(
+    "sugar.loader-grid",
+    "color",
+    "color|list-color",
+    $color
+  );
+  $cols: test-argument("sugar.loader-grid", "cols", integer, $cols);
+  $rows: test-argument("sugar.loader-grid", "rows", integer, $rows);
+  $size: test-argument("sugar.loader-grid", "size", number, $size);
+  $gap: test-argument("sugar.loader-grid", "gap", number, $gap);
+  $offset: test-argument("sugar.loader-grid", "offset", number, $offset);
+  $rotate: test-argument("sugar.loader-grid", "rotate", degree, $rotate);
+  $a-shape: test-argument(
+    "sugar.loader-grid",
+    "a-shape",
+    (rect, circle),
+    $a-shape
+  );
+  $a-steps: test-argument("sugar.loader-grid", "a-steps", integer, $a-steps);
+  $a-spread: test-argument("sugar.loader-grid", "a-spread", number, $a-spread);
+  $a-rotate: test-argument("sugar.loader-grid", "a-rotate", degree, $a-rotate);
+  $a-scale: test-argument("sugar.loader-grid", "a-scale", number, $a-scale);
+  $a-opacity: test-argument(
+    "sugar.loader-grid",
+    "a-opacity",
+    number,
+    $a-opacity
+  );
+  $a-duration: test-argument(
+    "sugar.loader-grid",
+    "a-duration",
+    second,
+    $a-duration
+  );
+  $a-delay: test-argument("sugar.loader-grid", "a-delay", second, $a-delay);
+  $a-ease: test-argument("sugar.loader-grid", "a-ease", string, $a-ease);
 
   // handle colors
   $colors: null;
-  @if s-is($color, list-color) and length($color) > 1 {
+  @if is($color, list-color) and list-length($color) > 1 {
     $colors: $color;
   }
 
@@ -83,7 +109,7 @@
   transform-origin: ($offset + $width / 2 + $gap + $size)
     ($offset + $height / 2 + $gap + $size);
 
-  $a-name: unquote("grid-#{unique-id()}");
+  $a-name: str-unquote("grid-#{str-unique-id()}");
 
   // calculate box shadows
   $shadows: ();
@@ -93,16 +119,16 @@
       $x: ($size * $i + $gap * $i) + $size + $gap + $offset;
       $y: ($size * $j + $gap * $j) + $size + $gap + $offset;
       $c: $color;
-      @if $colors and length($colors) == $cols * $rows {
-        $c: nth($colors, $color-idx);
+      @if $colors and list-length($colors) == $cols * $rows {
+        $c: list-nth($colors, $color-idx);
         $color-idx: $color-idx + 1;
-      } @else if length($colors) == 2 {
+      } @else if list-length($colors) == 2 {
         @if $j % 2 == 0 {
           $color-idx: $color-idx - 1;
         }
-        $c: nth($colors, $color-idx % 2 + 1);
+        $c: list-nth($colors, $color-idx % 2 + 1);
       }
-      $shadows: append($shadows, $c $x $y 0 0, comma);
+      $shadows: list-append($shadows, $c $x $y 0 0, comma);
     }
   }
 
@@ -127,7 +153,7 @@
   // animation
   @keyframes #{$a-name} {
     @for $i from 1 through $a-steps {
-      $percentage: percentage((1 - $p-delay) / $a-steps * $i);
+      $percentage: math-percentage((1 - $p-delay) / $a-steps * $i);
       #{$percentage} {
         // loop on each box shadows
         $shadows: ();
@@ -139,52 +165,52 @@
             $s-spread: 0;
             $blur: 0;
             $c: $color;
-            @if $colors and length($colors) == $cols * $rows {
-              $c: nth($colors, $color-idx);
+            @if $colors and list-length($colors) == $cols * $rows {
+              $c: list-nth($colors, $color-idx);
               $color-idx: $color-idx + 1;
-            } @else if length($colors) == 2 {
+            } @else if list-length($colors) == 2 {
               @if $j % 2 != 0 {
                 $color-idx: $color-idx - 1;
               }
-              $c: nth($colors, $color-idx % 2 + 1);
+              $c: list-nth($colors, $color-idx % 2 + 1);
             }
             $transparentize: 0;
             @if $a-opacity and $i < $a-steps {
               $transparentize: 1 - $a-opacity;
               $transparentize: $transparentize * 10;
-              $t-rand: random($transparentize);
+              $t-rand: math-random($transparentize);
               $transparentize: $t-rand / 10;
-              $c: transparentize($c, $transparentize);
+              $c: color-transparentize($c, $transparentize);
             }
             @if $a-scale {
               @if $i >= $a-steps {
                 $s-spread: 0;
               } @else {
-                $s-spread: random($a-scale - $size) + 0px;
+                $s-spread: math-random($a-scale - $size) + 0px;
               }
             }
             @if $a-spread and $i < $a-steps {
-              $randX: random($a-spread / 2);
-              $randY: random($a-spread / 2);
-              @if random(10) < 5 {
+              $randX: math-random($a-spread / 2);
+              $randY: math-random($a-spread / 2);
+              @if math-random(10) < 5 {
                 $randX: $randX * -1;
               }
-              @if random(10) < 5 {
+              @if math-random(10) < 5 {
                 $randY: $randY * -1;
               }
               $x: $x + $randX;
               $y: $y + $randY;
             }
             @if $i >= $a-steps {
-              $shadows: append($shadows, $c $x $y 0 0, comma);
+              $shadows: list-append($shadows, $c $x $y 0 0, comma);
             } @else {
-              $shadows: append($shadows, $c $x $y $blur $s-spread, comma);
+              $shadows: list-append($shadows, $c $x $y $blur $s-spread, comma);
             }
           }
         }
         @if $a-rotate and $i < $a-steps {
-          $randX: random($a-rotate / 2);
-          @if random(10) < 5 {
+          $randX: math-random($a-rotate / 2);
+          @if math-random(10) < 5 {
             $randX: $randX * -1;
           }
           transform: rotateZ($randX + 0deg);
@@ -193,9 +219,9 @@
         }
         @if $i < $a-steps - 1 {
           @if $a-shape == circle {
-            @include s-corner(50%);
+            @include corner(50%);
           } @else if $a-shape == rect {
-            @include s-corner(0);
+            @include corner(0);
           }
         }
         // apply shadows
