--- a/utils/sugar1/src/scss/loaders/_loader-radial.scss
+++ b/utils/sugar1/src/scss/loaders/_loader-radial.scss
@@ -1,65 +1,84 @@
-// @TODO : documentation
-@mixin s-loader-radial(
+/**
+ * @name      loader-radial
+ * Generate a radial styled loader
+ *
+ * @param       {String}      [$shape=circle]       The shape of the items that make the circle. Can be rect or circle
+ * @param       {Number}      [$size=1em]           The size of the items
+ * @param       {Number}      [$width=0.2em]        The width of the circle loader
+ * @param       {String}      [$style=solid]        The style of the items that form the loader. Can be none, hidden, dotted, dashed, solid, double, groove, ridge, inset, outset, initial or inherit
+ * @param       {Color}       [$color=color(primary)]     The color to use for the loader
+ * @param       {Second}      [$a-duration=2s]      How many time will be the animation
+ * @param       {Second}      [$a-delay=0s]         How many time to wait between two animation
+ * @param       {Number}      [$a-count=2]          How many circles will be animated
+ * @param       {Number}      [$a-spread=0]         Specify a spread value for the animation of each circles
+ * @param       {String}      [$a-ease=linear]      Specify the ease to use for the animation
+ *
+ * @example       scss
+ * .my-cool-loader {
+ *    @include sugar.loader-radial();
+ * }
+ *
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+ */
+@mixin loader-radial(
   $shape: circle,
   $size: 1em,
   $width: 0.2em,
   $style: solid,
-  $color: s-color(primary),
+  $color: color(primary),
   $a-duration: 2s,
   $a-delay: 0s,
   $a-count: 2,
   $a-spread: 0,
   $a-ease: linear
 ) {
-  @if $_sugar-test-arguments {
-    $shape: s-test-argument("s-loader-radial", "shape", (circle, rect), $shape);
-    $size: s-test-argument("s-loader-radial", "size", number, $size);
-    $width: s-test-argument("s-loader-radial", "width", number, $width);
-    $style: s-test-argument(
-      "s-loader-radial",
-      "style",
-      (
-        none,
-        hidden,
-        dotted,
-        dashed,
-        solid,
-        double,
-        groove,
-        ridge,
-        inset,
-        outset,
-        initial,
-        inherit
-      ),
-      $style
-    );
-    $color: s-test-argument(
-      "s-loader-radial",
-      "color",
-      "color|list-color",
-      $color
-    );
-    $a-duration: s-test-argument(
-      "s-loader-radial",
-      "a-duration",
-      second,
-      $a-duration
-    );
-    $a-delay: s-test-argument("s-loader-radial", "a-delay", second, $a-delay);
-    $a-count: s-test-argument("s-loader-radial", "a-count", integer, $a-count);
-    $a-spread: s-test-argument(
-      "s-loader-radial",
-      "a-spread",
-      number,
-      $a-spread
-    );
-    $a-ease: s-test-argument("s-loader-radial", "a-ease", string, $a-ease);
-  }
+  $shape: test-argument("sugar.loader-radial", "shape", (circle, rect), $shape);
+  $size: test-argument("sugar.loader-radial", "size", number, $size);
+  $width: test-argument("sugar.loader-radial", "width", number, $width);
+  $style: test-argument(
+    "sugar.loader-radial",
+    "style",
+    (
+      none,
+      hidden,
+      dotted,
+      dashed,
+      solid,
+      double,
+      groove,
+      ridge,
+      inset,
+      outset,
+      initial,
+      inherit
+    ),
+    $style
+  );
+  $color: test-argument(
+    "sugar.loader-radial",
+    "color",
+    "color|list-color",
+    $color
+  );
+  $a-duration: test-argument(
+    "sugar.loader-radial",
+    "a-duration",
+    second,
+    $a-duration
+  );
+  $a-delay: test-argument("sugar.loader-radial", "a-delay", second, $a-delay);
+  $a-count: test-argument("sugar.loader-radial", "a-count", integer, $a-count);
+  $a-spread: test-argument(
+    "sugar.loader-radial",
+    "a-spread",
+    number,
+    $a-spread
+  );
+  $a-ease: test-argument("sugar.loader-radial", "a-ease", string, $a-ease);
 
   // handle colors
   $colors: null;
-  @if s-is($color, list-color) and length($color) > 1 {
+  @if is($color, list-color) and list-length($color) > 1 {
     $colors: $color;
   }
 
@@ -72,8 +91,8 @@
     $p-delay: 1 - 1 / $a-duration * $a-delay;
   }
 
-  $a-name: unquote("radial-#{unique-id()}");
-  $step: percentage($p-delay / $a-count);
+  $a-name: str-unquote("radial-#{str-unique-id()}");
+  $step: math-percentage($p-delay / $a-count);
   $current: 0%;
   $current-idx: 1;
   @keyframes #{$a-name}-b {
@@ -84,8 +103,8 @@
           opacity: 0;
           top: 0;
           left: 0;
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             border-color: $c;
             // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
           }
@@ -93,8 +112,8 @@
         #{$current + $step / 2 - 0.0001%} {
           transform: translateX(-50%) translateY(-50%) scaleX(0.5) scaleY(0.5);
           opacity: 1;
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             border-color: $c;
             // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
           }
@@ -103,19 +122,19 @@
           transform: translateX(-50%) translateY(-50%) scaleX(1) scaleY(1);
           opacity: 0;
           @if $a-spread > 0 {
-            $randX: random(round($a-spread));
-            @if random(10) < 5 {
+            $randX: math-random(math-round($a-spread));
+            @if math-random(10) < 5 {
               $randX: $randX * -1;
             }
-            $randY: random(round($a-spread));
-            @if random(10) < 5 {
+            $randY: math-random(math-round($a-spread));
+            @if math-random(10) < 5 {
               $randY: $randY * -1;
             }
-            top: $randY + unquote(unit($a-spread));
-            left: $randX + unquote(unit($a-spread));
+            top: $randY + str-unquote(unit($a-spread));
+            left: $randX + str-unquote(unit($a-spread));
           }
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             border-color: $c;
             // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
           }
@@ -140,8 +159,8 @@
           opacity: 0;
           top: 0;
           left: 0;
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             border-color: $c;
             //background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
           }
@@ -149,8 +168,8 @@
         #{$current + $step / 2 - 0.0001%} {
           transform: translateX(-50%) translateY(-50%) scaleX(0.5) scaleY(0.5);
           opacity: 1;
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             border-color: $c;
             // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
           }
@@ -159,19 +178,19 @@
           transform: translateX(-50%) translateY(-50%) scaleX(1) scaleY(1);
           opacity: 0;
           @if $a-spread > 0 {
-            $randX: random(round($a-spread));
-            @if random(10) < 5 {
+            $randX: math-random(math-round($a-spread));
+            @if math-random(10) < 5 {
               $randX: $randX * -1;
             }
-            $randY: random(round($a-spread));
-            @if random(10) < 5 {
+            $randY: math-random(math-round($a-spread));
+            @if math-random(10) < 5 {
               $randY: $randY * -1;
             }
-            top: $randY + unquote(unit($a-spread));
-            left: $randX + unquote(unit($a-spread));
+            top: $randY + str-unquote(unit($a-spread));
+            left: $randX + str-unquote(unit($a-spread));
           }
-          @if $colors and length($colors) == $a-count * 2 {
-            $c: nth($colors, $current-idx);
+          @if $colors and list-length($colors) == $a-count * 2 {
+            $c: list-nth($colors, $current-idx);
             // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
             border-color: $c;
           }
@@ -197,7 +216,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    @include s-translate(-50%, -50%);
+    @include translate(-50%, -50%);
     opacity: 0;
     @if $shape == circle {
       border-radius: 50%;
@@ -205,16 +224,16 @@
   }
   // cubic-bezier(1,.01,0,1)
   $c: $color;
-  @if $colors and length($colors) >= 2 {
-    $c: nth($colors, 1);
+  @if $colors and list-length($colors) >= 2 {
+    $c: list-nth($colors, 1);
   }
   &:before {
     border: $width $style $c;
     // background: radial-gradient(transparentize($c, 1) 30%, $c 50%, transparentize($c, 1) 70%);
     animation: #{$a-name}-b $a-duration $a-ease 0s infinite;
   }
-  @if $colors and length($colors) >= 2 {
-    $c: nth($colors, 2);
+  @if $colors and list-length($colors) >= 2 {
+    $c: list-nth($colors, 2);
   }
   &:after {
     border: $width $style $c;
